--- a/index.html
+++ b/index.html
@@ -25,8 +25,14 @@
           <li>Courses</li>
           <li>Contact</li>
         </nav>
-        <div>
+        <div class="signup-div">
           <button>Sign Up</button>
+        </div>
+
+        <div class="tgl-div">
+          <button>
+            <i class="fa-solid fa-bars" style="color: #ffffff"></i>
+          </button>
         </div>
       </div>
     </header>
